Enabled access to Brands route

--- a/src/app/components/manage-user/manage-user.component.html
+++ b/src/app/components/manage-user/manage-user.component.html
@@ -124,7 +124,7 @@
             
             <div class="mb-3">
                 <button class="btn btn-primary fButton" (click)="updateUser()">Update Details</button>
-                <button class="btn btn-secondary fButton">Go to Brand Menu</button><!--  -->
+                <button class="btn btn-secondary fButton" (click)="routeToBrands()">Go to Brand Menu</button><!--  -->
             </div>
 
             <button class="btn btn-info fButton" (click)="setChangePassword(true)">Change Password Menu</button>
