--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -1,123 +1,163 @@
 
 <div class="container" [style.background-color]=color1 style="">
 
-    <div width="100%" class="form" [ngStyle]="{'background': gardiantTwo }">
-        <!-- <div *ngIf="!displayService.isMobile"  class="terms fadeInTerms" id="termBox" [ngStyle]="{'display': showTerms}">
-            <div class="TermsForm" [style.background-color]=color2 [style.color]=color3>
-                <label>Do agree to terms of service? (or other message we want to put here)</label> <br>
-                <input type="checkbox" id="termBox" name="termBox" value="agreed">
-            </div>
+  <div width="100%" class="form" [ngStyle]="{'background': gardiantTwo }">
+    <!-- <div *ngIf="!displayService.isMobile"  class="terms fadeInTerms" id="termBox" [ngStyle]="{'display': showTerms}">
+    <div class="TermsForm" [style.background-color]=color2 [style.color]=color3>
+      <label>Do agree to terms of service? (or other message we want to put here)</label> <br>
+      <input type="checkbox" id="termBox" name="termBox" value="agreed">
+    </div>
 
-            <div *ngIf="!displayService.isMobile" class="TermsForm" id="newsLetterId" [style.background-color]=color3 [style.color]=color4 style="opacity: 0;"> 
-                <label> Would you like to subscribe to news letter for fast app and news updates?</label>
-                <input type="checkbox" id="subscribeBox" name="subscribe" value="agreed">
-            </div>
+    <div *ngIf="!displayService.isMobile" class="TermsForm" id="newsLetterId" [style.background-color]=color3 [style.color]=color4 style="opacity: 0;">
+      <label> Would you like to subscribe to news letter for fast app and news updates?</label>
+      <input type="checkbox" id="subscribeBox" name="subscribe" value="agreed">
+    </div>
 
-        </div> -->
+  </div> -->
 
-        <div id="messageJumbo" [ngStyle]="{'background': loginGradient }" class="jumbotron desktop-message-jumbo">
-            <h2 [style.color]=color5 style="float:left"> Create Trec Account</h2> 
-            <div id="logoContainer" class="containGlobal">
-                <img class="LoginImage fadeInRight" src="assets/icons/outline.png">
-                <div class="clearfix"></div>
-                <img (click)="moveToLogin()" class="LoginImage-ref-2 fadeInLeftRef" id="Globe1" src="assets/icons/world-1.png">
-                <img id="Globe2" class="LoginImage-ref fadeInRightRef" src="../../../assets/icons/glob-2.png">
-            </div>
-        </div>
-        <div class="mobile-message-jumbo" style="width: 100%; background-color:khaki;">
-            <h4 style="margin-top: 20px;">Create Trec Account</h4>
-        </div>
+  <div id="messageJumbo" [ngStyle]="{'background': loginGradient }" class="jumbotron desktop-message-jumbo">
+    <h2 [style.color]=color5 style="float:left"> Create Trec Account</h2>
+    <div id="logoContainer" class="containGlobal">
+      <img class="LoginImage fadeInRight" src="assets/icons/outline.png">
+      <div class="clearfix"></div>
+      <img (click)="moveToLogin()" class="LoginImage-ref-2 fadeInLeftRef" id="Globe1" src="assets/icons/world-1.png">
+      <img id="Globe2" class="LoginImage-ref fadeInRightRef" src="../../../assets/icons/glob-2.png">
+    </div>
+  </div>
+  <div class="mobile-message-jumbo" style="width: 100%; background-color:khaki;">
+    <h4 style="margin-top: 20px;">Create Trec Account</h4>
+  </div>
 
-        <h4 *ngIf="updateFail" color="red">Failed To Update</h4>
-        <h4 *ngIf="needsFields" color="red">Required Fields still needed</h4>
-        <h4 *ngIf="!usernameFree" color="red">Username is taken</h4>
+  @if (updateFail) {
+    <h4 color="red">Failed To Update</h4>
+  }
+  @if (needsFields) {
+    <h4 color="red">Required Fields still needed</h4>
+  }
+  @if (!usernameFree) {
+    <h4 color="red">Username is taken</h4>
+  }
         <form [formGroup]="createForm" style="margin-left: 5px;display: grid;
         flex-wrap: wrap;height: min-content;">
-            <div class="form-group">
-                <label class="RegForm">Username: </label>
-                <input class="form-control" formControlName="username" (mouseenter)="enterInput()" type="text" [(ngModel)]="user.userPrincipalName">
-                <div *ngIf="createForm.get('username')?.touched">
-                    <p class="text-danger" *ngIf="createForm.get('username')?.hasError('required')">Please enter a username</p>
-                    <p class="text-danger" *ngIf="createForm.get('username')?.hasError('minlength') || createForm.get('username')?.hasError('maxlength')">Your username need to be between 6 and 20 characters long.</p>
-                </div>
-            </div>
-            
-            <div class="form-group">
-                <label class="RegForm">Display Name (your full name): </label>
-                <input class="form-control" formControlName="displayName" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="text" [(ngModel)]="user.displayName">
-                <p>Please use your real name here! You can later Create Brand Accounts to use with most of our services!</p>
-                <div *ngIf="createForm.get('displayName')?.touched">
-                    <p class="text-danger" *ngIf="createForm.get('displayName')?.hasError('required')">Please enter a Dispay Name</p>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="RegForm">Password: </label>
-                <input class="form-control" formControlName="password" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="password" [(ngModel)]="firstPassword">
-                <label class="RegForm">Re-Enter Password: </label>
-                <input class="form-control" formControlName="password2" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="password" [(ngModel)]="secondPassword">
-    
-                <p *ngIf="createForm.get('password')?.touched && createForm.get('password2')?.touched && secondPassword != firstPassword" class="text-danger" color="red">Passwords do NOT match</p>
-            
-                <div *ngIf="createForm.get('password')?.touched">
-                    <p class="text-danger" *ngIf="createForm.get('password')?.hasError('required')">Please enter a password</p>
-                    <p class="text-danger" *ngIf="createForm.get('password')?.hasError('minLength')">Your password needs to be 8 chracters long</p>
-                </div>
-            </div>
-            
-
-            <div class="form-group">
-               <!-- Placeholder for when Country Codes are supported -->
-                <p>Right now, only US numbers are supported</p>
-                <!-- <label class="RegForm">Country Code: +</label>
-                <input class="RegForm" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="number" [(ngModel)]="countryCode" max="999" min="0" [defaultValue]="1"> -->
-                <label class="RegForm">Phone Number: </label>
-                <input class="form-control" formControlName="phoneNumber" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="number" [(ngModel)]="user.mobilePhone" max="9999999999">
-                <div *ngIf="createForm.get('phoneNumber')?.touched">
-                    <p class="text-danger" *ngIf="createForm.get('phoneNumber')?.hasError('required')">Please enter a phone number</p>
-                </div>
-            </div>
-            
-            <div class="form-group">
-                <label class="RegForm">Birthday (Hidden from other users by Default): </label>
-                <input class="form-control" formControlName="birthday" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="date" [(ngModel)]="birthday">
-            
-                <div *ngIf="createForm.get('birthday')?.touched">
-                    <p class="text-danger" *ngIf="createForm.get('birthday')?.hasError('required')">Please enter your birthday</p>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="RegForm">External Email: </label>
-                <input class="form-control" formControlName="email" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="email" [(ngModel)]="user.mail"> 
-                <div *ngIf="createForm.get('email')?.touched">
-                    <p class="text-danger" *ngIf="createForm.get('email')?.hasError('required')">Please enter an email address</p>
-                    <p class="text-danger" *ngIf="createForm.get('email')?.hasError('email')">This field needs to contain an email</p>
-                </div>
-            </div>
-
-    </form>
-        
-        <br>
-       
-        <div class="containGlobal" style="width: 100%">
-
-            <button 
-                id="registerButton" 
-                [style.background-color]=color3 
-                [style.color]=color2  
-                class="btn btn-submit" 
-                (click)="create()"
-                [disabled]="hasErrors()"
-            >Create New Account</button>
- 
-
-            <button id="loginButton" [style.background-color]=color3 [style.color]=color2  class="btn btn-submit" (click)="moveToLogin()">To Login Page</button>
+    <div class="form-group">
+      <label class="RegForm">Username: </label>
+      <input class="form-control" formControlName="username" (mouseenter)="enterInput()" type="text" [(ngModel)]="user.userPrincipalName">
+      @if (createForm.get('username')?.touched) {
+        <div>
+          @if (createForm.get('username')?.hasError('required')) {
+            <p class="text-danger">Please enter a username</p>
+          }
+          @if (createForm.get('username')?.hasError('minlength') || createForm.get('username')?.hasError('maxlength')) {
+            <p class="text-danger">Your username need to be between 6 and 20 characters long.</p>
+          }
         </div>
+      }
     </div>
 
-    <div class="screen-darkener"  *ngIf="showSpinner">
-        <mat-progress-spinner [mode]="'indeterminate'"></mat-progress-spinner>
+    <div class="form-group">
+      <label class="RegForm">Display Name (your full name): </label>
+      <input class="form-control" formControlName="displayName" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="text" [(ngModel)]="user.displayName">
+      <p>Please use your real name here! You can later Create Brand Accounts to use with most of our services!</p>
+      @if (createForm.get('displayName')?.touched) {
+        <div>
+          @if (createForm.get('displayName')?.hasError('required')) {
+            <p class="text-danger">Please enter a Dispay Name</p>
+          }
+        </div>
+      }
     </div>
+
+    <div class="form-group">
+      <label class="RegForm">Password: </label>
+      <input class="form-control" formControlName="password" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="password" [(ngModel)]="firstPassword">
+      <label class="RegForm">Re-Enter Password: </label>
+      <input class="form-control" formControlName="password2" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="password" [(ngModel)]="secondPassword">
+
+      @if (createForm.get('password')?.touched && createForm.get('password2')?.touched && secondPassword != firstPassword) {
+        <p class="text-danger" color="red">Passwords do NOT match</p>
+      }
+
+      @if (createForm.get('password')?.touched) {
+        <div>
+          @if (createForm.get('password')?.hasError('required')) {
+            <p class="text-danger">Please enter a password</p>
+          }
+          @if (createForm.get('password')?.hasError('minLength')) {
+            <p class="text-danger">Your password needs to be 8 chracters long</p>
+          }
+        </div>
+      }
+    </div>
+
+
+    <div class="form-group">
+      <!-- Placeholder for when Country Codes are supported -->
+      <p>Right now, only US numbers are supported</p>
+      <!-- <label class="RegForm">Country Code: +</label>
+      <input class="RegForm" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="number" [(ngModel)]="countryCode" max="999" min="0" [defaultValue]="1"> -->
+      <label class="RegForm">Phone Number: </label>
+      <input class="form-control" formControlName="phoneNumber" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="number" [(ngModel)]="user.mobilePhone" max="9999999999">
+      @if (createForm.get('phoneNumber')?.touched) {
+        <div>
+          @if (createForm.get('phoneNumber')?.hasError('required')) {
+            <p class="text-danger">Please enter a phone number</p>
+          }
+        </div>
+      }
+    </div>
+
+    <div class="form-group">
+      <label class="RegForm">Birthday (Hidden from other users by Default): </label>
+      <input class="form-control" formControlName="birthday" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="date" [(ngModel)]="birthday">
+
+      @if (createForm.get('birthday')?.touched) {
+        <div>
+          @if (createForm.get('birthday')?.hasError('required')) {
+            <p class="text-danger">Please enter your birthday</p>
+          }
+        </div>
+      }
+    </div>
+
+    <div class="form-group">
+      <label class="RegForm">External Email: </label>
+      <input class="form-control" formControlName="email" (mouseenter)="enterInput()" (mouseout)="checkFormsCompletion()" type="email" [(ngModel)]="user.mail">
+      @if (createForm.get('email')?.touched) {
+        <div>
+          @if (createForm.get('email')?.hasError('required')) {
+            <p class="text-danger">Please enter an email address</p>
+          }
+          @if (createForm.get('email')?.hasError('email')) {
+            <p class="text-danger">This field needs to contain an email</p>
+          }
+        </div>
+      }
+    </div>
+
+  </form>
+
+  <br>
+
+    <div class="containGlobal" style="width: 100%">
+
+      <button
+        id="registerButton"
+        [style.background-color]=color3
+        [style.color]=color2
+        class="btn btn-submit"
+        (click)="create()"
+        [disabled]="hasErrors()"
+      >Create New Account</button>
+
+
+      <button id="loginButton" [style.background-color]=color3 [style.color]=color2  class="btn btn-submit" (click)="moveToLogin()">To Login Page</button>
+    </div>
+  </div>
+
+  @if (showSpinner) {
+    <div class="screen-darkener" >
+      <mat-progress-spinner [mode]="'indeterminate'"></mat-progress-spinner>
+    </div>
+  }
 
 </div>
