--- a/src/app/components/manage-user/manage-user.component.html
+++ b/src/app/components/manage-user/manage-user.component.html
@@ -1,164 +1,165 @@
 <app-nav></app-nav>
 
 <div class="container element-container" [ngClass]="'element-container-' + ss.style" style="position: relative;">
-    <!-- <button class="btn btn-info" (click)="routeToSubscriptions()"  *ngIf="userService.verificationStatus == 1">Subscriptions</button>
-    <button class="btn btn-info" (click)="routeToBrands()"  *ngIf="userService.verificationStatus == 1">Brands</button> -->
+  <!-- <button class="btn btn-info" (click)="routeToSubscriptions()"  *ngIf="userService.verificationStatus == 1">Subscriptions</button>
+  <button class="btn btn-info" (click)="routeToBrands()"  *ngIf="userService.verificationStatus == 1">Brands</button> -->
 
-    <div *ngIf="userService.currentUser" class="form">
-
-        <div class="element-item " [ngClass]="'element-item-' + ss.style">
-
-        <div *ngIf="userService.currentUser.emailVerified">
-            <div *ngIf="userService.verificationStatus == 1" class="grid-and-center">
+  @if (userService.currentUser) {
+    <div class="form">
+      <div class="element-item " [ngClass]="'element-item-' + ss.style">
+        @if (userService.currentUser.emailVerified) {
+          <div>
+            @if (userService.verificationStatus == 1) {
+              <div class="grid-and-center">
                 <div class="profileContainer">
-                    <img class="profilePic" [src]="userService.profilePic" (error)="imageError($event)">
+                  <img class="profilePic" [src]="userService.profilePic" (error)="imageError($event)">
                 </div>
                 <button class="btn btn-info" (click)="onShowGallery(true)">Update Profile Pic</button>
-
                 <!--Has the User been fully verified by TrecApps staff?-->
                 <h2 style="text-align: center;">UserVerified</h2>
-
-            </div>
-
-            <div *ngIf="userService.verificationStatus != 1" style="padding: 5px;">
+              </div>
+            }
+            @if (userService.verificationStatus != 1) {
+              <div style="padding: 5px;">
                 <h3>Verification Steps</h3>
-
-                <p>In order to take full advantage of what TrecApps has to offer (Image posting, Social Media Profile Creation, etc.), you will need to be fully verified. 
-                    Since this is a test site, verification requires contacting the owner of the site (Assuming you know him personally).</p>
-            
+                <p>In order to take full advantage of what TrecApps has to offer (Image posting, Social Media Profile Creation, etc.), you will need to be fully verified.
+                Since this is a test site, verification requires contacting the owner of the site (Assuming you know him personally).</p>
                 <p>Your account id is "{{ userService.currentUser.id }}". Letting him know this can help him verify you.</p>
-
-            </div>
+              </div>
+            }
             <!-- <button class="btn btn-submit" *ngIf="userService.verificationStatus == 0" (click)="requestVerification()">Request Verification</button>
             <div *ngIf="userService.verificationStatus == -1">
-                <h6>Select a Photo TrecApps Administrators can use to verify your Identity</h6>
-                <input style="display: none" type="file" (change)="onVerifyFileChanged($event)" #fileInput>
-                <button class="btn btn-info" (click)="fileInput.click()">Select Verification Pic</button>
-                <button class="btn btn-submit" (click)="uploadVerfiyPic()" *ngIf="selectedVerfiyFile && selectedVerifyFileType">Upload Verify Pic</button><br>
+              <h6>Select a Photo TrecApps Administrators can use to verify your Identity</h6>
+              <input style="display: none" type="file" (change)="onVerifyFileChanged($event)" #fileInput>
+              <button class="btn btn-info" (click)="fileInput.click()">Select Verification Pic</button>
+              <button class="btn btn-submit" (click)="uploadVerfiyPic()" *ngIf="selectedVerfiyFile && selectedVerifyFileType">Upload Verify Pic</button><br>
             </div> -->
-        </div>
-        <div *ngIf="!userService.currentUser.emailVerified" class="textBackground">
+          </div>
+        }
+        @if (!userService.currentUser.emailVerified) {
+          <div class="textBackground">
             <p>Welcome to TrecApps. To begin using our services in earnest, we need to ensure you are who you say you are.</p>
             <p>The process is short and is as follows:</p>
             <ol>
-                <li>Verify Your Email</li>
-                <li>Request Verification. (Note: this can be done by contactng the site creater and providing him your User ID)</li>
-                <li style="text-decoration: line-through;">Upload Proof of Identity. These are pictures that our employees will use to validate your Identity. Only they (and you) will have access to them!</li>
+              <li>Verify Your Email</li>
+              <li>Request Verification. (Note: this can be done by contactng the site creater and providing him your User ID)</li>
+              <li style="text-decoration: line-through;">Upload Proof of Identity. These are pictures that our employees will use to validate your Identity. Only they (and you) will have access to them!</li>
             </ol>
             <p>Once you are verified, you can perform tasks such as</p>
             <ul>
-                <li>Set a Profile Picture</li>
-                <li>Create a Profile on Coffeeshop</li>
-                <li>Set up Subscriptions (Soon)</li>
-                <li>Upload pictures of your recent trip to Hawaii</li>
-                <li style="text-decoration: line-through;">Create Brand Accounts that you can use in most services</li>
+              <li>Set a Profile Picture</li>
+              <li>Create a Profile on Coffeeshop</li>
+              <li>Set up Subscriptions (Soon)</li>
+              <li>Upload pictures of your recent trip to Hawaii</li>
+              <li style="text-decoration: line-through;">Create Brand Accounts that you can use in most services</li>
             </ul>
-        </div>
-
-        </div>
-
-
-
-        <br>
-
+          </div>
+        }
+      </div>
+      <br>
         <!-- <div class="sShadow"> -->
-            <h2>User Details</h2>
-
-            <div class="element-item" [ngClass]="'element-item-' + ss.style">
-                <div class="mb-3">
-                    <label class="form-label">User ID: </label>
-                    <input class="form-control" type="text" [(ngModel)]="userService.currentUser.id" readonly>
-                </div>
-                
-                <div class="mb-3">
-                    <label class="form-label">Username: </label>
-                    <input class="form-control" type="text" [(ngModel)]="userService.currentUser.userProfile" readonly>
-                </div>               
-            </div>
-
-            <!-- <label>Country Code: +</label>
-            <input type="number"  -->
-
-            <div class="element-item" [ngClass]="'element-item-' + ss.style">
-                <div class="mb-3">
-                    <label class="form-label">Mobile Phone: (Right now, US +1 is assumed, as it is the only one currently supported)</label>
-                    <input class="form-control" type="number" *ngIf="userService.currentUser.proposedNumber" [(ngModel)]="userService.currentUser.proposedNumber.number" >
-                    <!-- <button *ngIf="!userService?.currentUser?.phoneVerified" (click)="attemptPhoneVerification()" class="btn btn-info">Verify Phone</button> -->
-                    <p class="text-danger">Phone Verification is Currently disabled!</p>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Email: </label>
-                    <input class="form-control" type="email" [(ngModel)]="userService.currentUser.proposedEmail"> 
-                    <button *ngIf="!userService.currentUser.isEmailVerified()" (click)="attemptEmailVerification()" class="btn btn-info">Verify Email</button>
-                </div>
-            </div>
-
-            <div class="element-item" [ngClass]="'element-item-' + ss.style">
-                <div class="mb-3">
-                    <label class="form-label">Birthday:</label>
-                    <input class="form-control" type="date" [(ngModel)]="userService.currentUser.birthday" readonly>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Birthday Privacy: {{ currentBirthdayDetail }}</label>
-                    <select class="form-select" [(ngModel)]="currentBirthdayDetail">
-                        <option *ngFor="let birthOpt of birthdayDetails" [value]="birthOpt.setting">{{birthOpt.details}}</option>
-                    </select>
-                </div>
-
-            </div>
-
-            <div class="element-item" [ngClass]="'element-item-' + ss.style">
-                <div class="mb-3">
-                    <label class="form-label">Account Restrictions: </label>
-                    <input class="form-control" type="text" [(ngModel)]="userService.currentUser.restrictions" readonly>
-                </div>
-
-                <div class="mb-3">
-                    <label class="form-label">Credibility Rating: </label>
-                    <input class="form-control" type="number" [(ngModel)]="userService.currentUser.credibilityRating" readonly>
-                </div>
-
-            </div>
-
-            <hr>
-            
-            <div class="mb-3">
-                <button class="btn btn-primary fButton" (click)="updateUser()">Update Details</button>
-                <button class="btn btn-secondary fButton" (click)="routeToBrands()">Go to Brand Menu</button><!--  -->
-            </div>
-
-            <button class="btn btn-info fButton" (click)="setChangePassword(true)">Change Password Menu</button>
-            <br>
-
-            <div *ngIf="changePassword" class="mb-3">
+        <h2>User Details</h2>
+        <div class="element-item" [ngClass]="'element-item-' + ss.style">
+          <div class="mb-3">
+            <label class="form-label">User ID: </label>
+            <input class="form-control" type="text" [(ngModel)]="userService.currentUser.id" readonly>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Username: </label>
+            <input class="form-control" type="text" [(ngModel)]="userService.currentUser.userProfile" readonly>
+          </div>
+        </div>
+        <!-- <label>Country Code: +</label>
+        <input type="number"  -->
+        <div class="element-item" [ngClass]="'element-item-' + ss.style">
+          <div class="mb-3">
+            <label class="form-label">Mobile Phone: (Right now, US +1 is assumed, as it is the only one currently supported)</label>
+            @if (userService.currentUser.proposedNumber) {
+              <input class="form-control" type="number" [(ngModel)]="userService.currentUser.proposedNumber.number" >
+            }
+            <!-- <button *ngIf="!userService?.currentUser?.phoneVerified" (click)="attemptPhoneVerification()" class="btn btn-info">Verify Phone</button> -->
+            <p class="text-danger">Phone Verification is Currently disabled!</p>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Email: </label>
+            <input class="form-control" type="email" [(ngModel)]="userService.currentUser.proposedEmail">
+            @if (!userService.currentUser.isEmailVerified()) {
+              <button (click)="attemptEmailVerification()" class="btn btn-info">Verify Email</button>
+            }
+          </div>
+        </div>
+        <div class="element-item" [ngClass]="'element-item-' + ss.style">
+          <div class="mb-3">
+            <label class="form-label">Birthday:</label>
+            <input class="form-control" type="date" [(ngModel)]="userService.currentUser.birthday" readonly>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Birthday Privacy: {{ currentBirthdayDetail }}</label>
+            <select class="form-select" [(ngModel)]="currentBirthdayDetail">
+              @for (birthOpt of birthdayDetails; track birthOpt) {
+                <option [value]="birthOpt.setting">{{birthOpt.details}}</option>
+              }
+            </select>
+          </div>
+        </div>
+        <div class="element-item" [ngClass]="'element-item-' + ss.style">
+          <div class="mb-3">
+            <label class="form-label">Account Restrictions: </label>
+            <input class="form-control" type="text" [(ngModel)]="userService.currentUser.restrictions" readonly>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Credibility Rating: </label>
+            <input class="form-control" type="number" [(ngModel)]="userService.currentUser.credibilityRating" readonly>
+          </div>
+        </div>
+        <hr>
+          <div class="mb-3">
+            <button class="btn btn-primary fButton" (click)="updateUser()">Update Details</button>
+            <button class="btn btn-secondary fButton" (click)="routeToBrands()">Go to Brand Menu</button><!--  -->
+          </div>
+          <button class="btn btn-info fButton" (click)="setChangePassword(true)">Change Password Menu</button>
+          <br>
+            @if (changePassword) {
+              <div class="mb-3">
                 <label class="form-label">Current Password: </label>
                 <input class="form-control" type="password" [(ngModel)]="oldPassword"><br>
-            </div>
-            
-            <div *ngIf="changePassword" class="mb-3">
-                <label *ngIf="changePassword" class="form-label">New Password: </label>
-                <input *ngIf="changePassword" class="form-control" type="password" [(ngModel)]="newPassword1">
-            </div>
-
-            <div *ngIf="changePassword" class="mb-3">
-                <label *ngIf="changePassword" class="form-label">Re-enter New Password: </label>
-                <input *ngIf="changePassword" class="form-control" type="password" [(ngModel)]="newPassword2">
-            </div>
+              </div>
+            }
+            @if (changePassword) {
+              <div class="mb-3">
+                @if (changePassword) {
+                  <label class="form-label">New Password: </label>
+                }
+                @if (changePassword) {
+                  <input class="form-control" type="password" [(ngModel)]="newPassword1">
+                }
+              </div>
+            }
+            @if (changePassword) {
+              <div class="mb-3">
+                @if (changePassword) {
+                  <label class="form-label">Re-enter New Password: </label>
+                }
+                @if (changePassword) {
+                  <input class="form-control" type="password" [(ngModel)]="newPassword2">
+                }
+              </div>
+            }
             <hr>
-
-            <button *ngIf="changePassword" class="btn btn-primary fButton" (click)="updatePassword()" >Update Password</button>
-        <!-- </div> -->
-
-        <br>
-        
-    </div>
-    <!-- <lib-image-gallery #imgGallery (useImage)="setProfilePic($event)" [appName]="'Main'" [executeMessage]="'Set Profile Pic'"></lib-image-gallery> -->
-    <app-image-gallery-v2 
-        #imgGallery 
-        [baseUrl]="baseUrl" 
-        [show]="showGallery" 
-        (onClose)="showGallery = false" 
-        [purpose]="imagePurpose"
-        [mbLimit]="4"
-        ></app-image-gallery-v2>
-</div>
+              @if (changePassword) {
+                <button class="btn btn-primary fButton" (click)="updatePassword()" >Update Password</button>
+              }
+            <!-- </div> -->
+            <br>
+            </div>
+          }
+          <!-- <lib-image-gallery #imgGallery (useImage)="setProfilePic($event)" [appName]="'Main'" [executeMessage]="'Set Profile Pic'"></lib-image-gallery> -->
+          <app-image-gallery-v2
+            #imgGallery
+            [baseUrl]="baseUrl"
+            [show]="showGallery"
+            (onClose)="showGallery = false"
+            [purpose]="imagePurpose"
+            [mbLimit]="4"
+          ></app-image-gallery-v2>
+        </div>
