--- a/src/app/components/mfa/mfa.component.html
+++ b/src/app/components/mfa/mfa.component.html
@@ -3,74 +3,107 @@
 
 <div class="container scrollable-child uShadow" style="position: relative;">
 
-    <h1>Multi-Factor Authentication (MFA) Menu</h1>
+  <h1>Multi-Factor Authentication (MFA) Menu</h1>
 
-    <h2 *ngIf="mfaMechanisms.length">Available Options</h2>
+  @if (mfaMechanisms.length) {
+    <h2>Available Options</h2>
+  }
 
-    <div class="mfa-available-option" *ngFor="let option of mfaMechanisms">
-        <h4>{{ option.source }}</h4>
-        
-
-        <div *ngIf="option.source == 'Phone'">
-            <button *ngIf="user.phoneVerified" class="btn btn-primary" (click)="enablePhoneMfa()">Enable Text MFA</button>
-            <p *ngIf="!user.phoneVerified" class="red-text">Your phone needs to be Verified before it can be used for MFA</p>
-        </div>
-        <div *ngIf="option.source == 'Email'">
-            <button *ngIf="user.emailVerified" class="btn btn-primary" (click)="enableEmailMfa()">Enable Email MFA</button>
-            <p *ngIf="!user.emailVerified" class="red-text">Your email needs to be Verified before it can be used for MFA</p>
-        </div>
-    </div>
-
+  @for (option of mfaMechanisms; track option) {
     <div class="mfa-available-option">
-        <h4>Token (Authenticator app)</h4>
+      <h4>{{ option.source }}</h4>
+      @if (option.source == 'Phone') {
         <div>
-            <button class="btn btn-primary" (click)="requestToken()">Request Token</button>
+          @if (user.phoneVerified) {
+            <button class="btn btn-primary" (click)="enablePhoneMfa()">Enable Text MFA</button>
+          }
+          @if (!user.phoneVerified) {
+            <p class="red-text">Your phone needs to be Verified before it can be used for MFA</p>
+          }
         </div>
+      }
+      @if (option.source == 'Email') {
+        <div>
+          @if (user.emailVerified) {
+            <button class="btn btn-primary" (click)="enableEmailMfa()">Enable Email MFA</button>
+          }
+          @if (!user.emailVerified) {
+            <p class="red-text">Your email needs to be Verified before it can be used for MFA</p>
+          }
+        </div>
+      }
     </div>
+  }
 
-    <h2 *ngIf="user.mfaMechanisms.length">Active Options</h2>
-
-    <div class="mfa-available-option" *ngFor="let option of user.mfaMechanisms">
-        <h3>{{ option.source }}</h3>
-        <h4 *ngIf="option.source == 'Phone'">+{{ user.mobilePhone?.countryCode}} {{user.mobilePhone?.number}}</h4>
-        <h4 *ngIf="option.source == 'Email'">{{user.email}}</h4>
-        <h4 *ngIf="option.source == 'Token' && option.name">Token: {{option.name}}</h4>
-        <button class="btn btn-danger" (click)="removeOtherMech(option.source, option.name)">Deactivate Mechanism</button>
+  <div class="mfa-available-option">
+    <h4>Token (Authenticator app)</h4>
+    <div>
+      <button class="btn btn-primary" (click)="requestToken()">Request Token</button>
     </div>
+  </div>
 
-    <div class="mfa-reg-holder" *ngIf="registrationData">
-        <div class="mfa-qr-holder">
-            <img [src]="registrationData.qrCode">
+  @if (user.mfaMechanisms.length) {
+    <h2>Active Options</h2>
+  }
 
-            <br>
+  @for (option of user.mfaMechanisms; track option) {
+    <div class="mfa-available-option">
+      <h3>{{ option.source }}</h3>
+      @if (option.source == 'Phone') {
+        <h4>+{{ user.mobilePhone?.countryCode}} {{user.mobilePhone?.number}}</h4>
+      }
+      @if (option.source == 'Email') {
+        <h4>{{user.email}}</h4>
+      }
+      @if (option.source == 'Token' && option.name) {
+        <h4>Token: {{option.name}}</h4>
+      }
+      <button class="btn btn-danger" (click)="removeOtherMech(option.source, option.name)">Deactivate Mechanism</button>
+    </div>
+  }
+
+  @if (registrationData) {
+    <div class="mfa-reg-holder">
+      <div class="mfa-qr-holder">
+        <img [src]="registrationData.qrCode">
+        <br>
+          <hr>
+            <label>Backup token (if your camera doesn't work)</label>
+            <p>{{ registrationData.userCode }}</p>
             <hr>
-                <label>Backup token (if your camera doesn't work)</label>
-                <p>{{ registrationData.userCode }}</p>
-            <hr>
-        </div>
+            </div>
+            <input type="text" [(ngModel)]="mfaCode" class="form-control">
+            <div style="display: flex; flex-flow: row wrap;">
+              @if (mfaCode.trim().length) {
+                <button class="btn btn-submit" (click)="testCode()">Test Code</button>
+              }
+              @if (prospectiveName) {
+                <button class="btn btn-danger" (click)="removeTokenCode(prospectiveName)">Delete Token</button>
+              }
+            </div>
+            <button class="btn btn-submit" (click)="doneWithCode()">Done</button>
+          </div>
+        }
 
-        <input type="text" [(ngModel)]="mfaCode" class="form-control">
-        <div style="display: flex; flex-flow: row wrap;">
-            <button *ngIf="mfaCode.trim().length" class="btn btn-submit" (click)="testCode()">Test Code</button>
-            <button *ngIf="prospectiveName" class="btn btn-danger" (click)="removeTokenCode(prospectiveName)">Delete Token</button>
-        </div>
-
-        <button class="btn btn-submit" (click)="doneWithCode()">Done</button>
-    </div>
-
-    <div *ngIf="user.mfaMechanisms.length"> <!-- Only show if MFA is avaiable to the user -->
-        <div class="mfa-requirement" *ngFor="let req of mfaRequirements">
-            <h3>{{ req.data.app }}</h3>
-            <div style="flex-grow: 1;"></div>
-            <button *ngIf="!req.saved" class="btn btn-primary" (click)="saveRequirement(req)">Save</button>
-            <input type="radio" class="form-check-input" [checked]="req.data.requireMfa" (click)="setRequire(req, true, $event)" [disabled]="req.data.app == 'Trec-Apps-User-Service'">
-            <label class="form-check-label">Mfa Required</label>
-            <span>|</span>
-            <input type="radio" class="form-check-input" [checked]="!req.data.requireMfa" (click)="setRequire(req, false, $event)" [disabled]="req.data.app == 'Trec-Apps-User-Service'">
-            <label class="form-check-label red-text">Mfa NOT Required</label>
-        </div>
-    </div>
-    
+        @if (user.mfaMechanisms.length) {
+          <div> <!-- Only show if MFA is avaiable to the user -->
+            @for (req of mfaRequirements; track req) {
+              <div class="mfa-requirement">
+                <h3>{{ req.data.app }}</h3>
+                <div style="flex-grow: 1;"></div>
+                @if (!req.saved) {
+                  <button class="btn btn-primary" (click)="saveRequirement(req)">Save</button>
+                }
+                <input type="radio" class="form-check-input" [checked]="req.data.requireMfa" (click)="setRequire(req, true, $event)" [disabled]="req.data.app == 'Trec-Apps-User-Service'">
+                <label class="form-check-label">Mfa Required</label>
+                <span>|</span>
+                <input type="radio" class="form-check-input" [checked]="!req.data.requireMfa" (click)="setRequire(req, false, $event)" [disabled]="req.data.app == 'Trec-Apps-User-Service'">
+                <label class="form-check-label red-text">Mfa NOT Required</label>
+              </div>
+            }
+          </div>
+        }
 
 
-</div>
+
+      </div>
